Tratando redirecionamentos, fazendo download do robots, e outras mudanças